--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,36 +1,82 @@
 ---
-title: "Acessibilidade geográfica aos serviços de saíde para SARS em Teresina, Piauí"
+title: "Acessibilidade geográfica aos serviços de saúde para SARS em Teresina, Piauí"
 author: 
   - name: Felipe Ramos Dantas
     orcid: 0000-0002-8839-8759
-institute: "Instituto Federal do Piauí - Campus Teresina Central"
-date: last-modified
-date-format: "[Atualizado em:] MMMM, YYYY"
+    email: felipe.dantas@ifpi.edu.br
+    affiliation:
+      - id: ifpi
+        name: Instituto Federal do Piauí - Campus Teresina Central
+        city: Teresina
+        state: PI
+        url: ifpi.edu.br
+  - name: Prof. Dr. Antônio Joaquim da Silva
+    orcid: 0000-0002-8756-9464
+    degrees:
+      - B.S.
+      - PhD
+    email: antoniojoaquim@ifpi.edu.br
+    affiliation:
+      - ref: ifpi
+        city: Teresina
+        state: PI
+        url: ifpi.edu.br
+# date: last-modified
+# date-format: "[Atualizado em:] MMMM, YYYY"
 lang: "pt-br"
-format: 
-  revealjs:
-    center-title-slide: true
-    controls: true
-    embed-resources: true
-    smaller: true
-    scrollable: true
-    theme: "./estilos/urbn.scss"
-    highlight-style: github
-    slide-number: true
-    incremental: false
-    toc: false
-    # toc-title: "Sumário"
-    transition: slide
-    background-transition: fade
-    height: 900
-    width: 1400
-    footer: "Acessibilidade geográfica aos serviços de saúde para SARS em Teresina, Piauí | 25 de setembro de 2024"
-    # logo: "imagens/ifpi.png"
+copyright: 
+  holder: Felipe Ramos Dantas
+  year: 2024
 license: "CC BY"
 # bibliography: refs.bib
+format: 
+  revealjs:
+    controls: true
+    embed-resources: true
+    theme: "./estilos/FRDstyle.scss"
+    highlight-style: github
+    slide-number: "h/v"
+    incremental: false
+    transition: slide
+    background-transition: fade
+    width: 1920
+    height: 1080
+    # footer: "Acessibilidade geográfica aos serviços de saúde para SARS em Teresina, Piauí | 25 de setembro de 2024"
 title-slide-attributes: 
-    data-background-image: "imagens/mapeprof.png"
-    data-background-size: 20%
-    data-background-position: 90% 83%
+    data-background-image: "./imagens/logo-mapeprof-ifpi-1400x500px.png"
+    data-background-size: 25%
+    data-background-position: 50% 90%
+    data-background-opacity: "0.6"
 ---
 
+# Introdução/Contexto
+
+## Problema de Pesquisa
+
+::: {.callout-note icon="false"}
+## Problema de Pesquisa
+
+Como as desigualdades espaciais, socioeconômicas e os efeitos de congestionamento aos serviços de saúde para SARS impactam o acesso geográfico a leitos de UTI com ventiladores em Teresina, PI?
+:::
+
+- ALHUMA VOISA ^[Rodapé]
+
+::: aside
+Some additional commentary of more peripheral interest.
+:::
+
+::: footer
+Acessibilidade Geográfica aos serviços de saúde para SARS em Teresina, PI | V Seminário Integrador
+:::
+
+## Justificativa
+
+# Objetivos
+
+# Fundamentação Teórica
+
+# Metodologia
+
+# Resultados Esperados
+
+# Referências
